Liberty dockerfile changes and build with Java 8